<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.neverendingstory.ui.home.HomeFragment"
        android:label="네버앤딩 스토리"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_top"
            app:destination="@id/nav_top" />
        <action
            android:id="@+id/action_nav_home_to_nav_new"
            app:destination="@id/nav_new" />
    </fragment>



    <fragment
        android:id="@+id/nav_top"
        android:name="com.example.neverendingstory.ui.top.TopFragment"
        android:label="네버앤딩 스토리"
        tools:layout="@layout/fragment_top" >
        <action
            android:id="@+id/action_nav_top_to_nav_new"
            app:destination="@id/nav_new" />
        <action
            android:id="@+id/action_nav_top_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_new"
        android:name="com.example.neverendingstory.ui.newf.NewFragment"
        android:label="네버앤딩 스토리"
        tools:layout="@layout/fragment_new" >
        <action
            android:id="@+id/action_nav_new_to_nav_top"
            app:destination="@id/nav_top" />
        <action
            android:id="@+id/action_nav_new_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.neverendingstory.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.neverendingstory.ui.category.CategoryFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.neverendingstory.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.neverendingstory.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.neverendingstory.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>