<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/text_home"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="60dp"
        android:textColor="@color/colorMain"
        android:text="@string/menu_home"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/text_top"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:textColor="@color/colorWhite"
        android:text="@string/menu_Top"
        android:background="@color/colorMain"
        app:layout_constraintStart_toEndOf="@+id/text_home"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/text_new"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorWhite"
        android:text="@string/menu_New"
        android:textColor="@color/colorMain"
        app:layout_constraintStart_toEndOf="@+id/text_top"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_top" />

    <Spinner
        android:id="@+id/spinner"
        android:entries="@array/genre"
        android:background="@drawable/spinner_background"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />


</androidx.constraintlayout.widget.ConstraintLayout>