<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/text_home"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorMain"
        android:text="@string/menu_home"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/text_top"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorWhite"
        android:text="@string/menu_Top"
        android:textColor="@color/colorMain"
        app:layout_constraintStart_toEndOf="@+id/text_home"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/text_new"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorWhite"
        android:text="@string/menu_New"
        android:textColor="@color/colorMain"
        app:layout_constraintStart_toEndOf="@+id/text_top"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="310dp"
        android:layout_height="134dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_top">


        <TextView
            android:id="@+id/recommendedNovelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="추천소설"
            android:textColor="@color/colorBlack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommendedNovelView"
            android:layout_width="280dp"
            android:layout_height="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="310dp"
        android:layout_height="134dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <TextView
            android:id="@+id/myNovelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="내가 쓴 글"
            android:textColor="@color/colorBlack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/myNovelView"
            android:layout_width="280dp"
            android:layout_height="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="134dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <TextView
            android:id="@+id/recentNovelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="최근 이어진 글"
            android:textColor="@color/colorBlack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentNovelView"
            android:layout_width="280dp"
            android:layout_height="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>